# yap_auth_public

./: .env.docker  .env.example  Dockerfile  Dockerfile_auth  README.md  docker-compose.yml  entrypoint.sh  gunicorn.conf.py  pyproject.toml  requirements.txt  wsgi_app.py
app/: .dockerignore  __init__.py  app.py  db.py  main.py
app/api/v1/: auth.py  dto.py  ns.py  permissions.py  roles.py  social.py  users.py  utils.py
app/auth/: __init__.py  controller.py  dto.py
app/config/: logger.py  settings.py
app/etc/: auth_db_schema.sql
app/models/: base.py  history.py  permissions.py  roles.py  roles_permissions.py  schemas.py  users.py  users_roles.py
app/services/: anti_ddos.py  auth_decorators.py  base.py  cli.py  permissions.py  redis.py  roles.py  users.py  utils.py
migrations/versions/: 05c25ab126cc_.py  87424e5b4208_auth_module.py  8b285ea918d6_init.py  a147d9743b0b_.py  dd74a466dd96_add_roles_and_permissions.py  e14e93b4d27d_.py
nginx/conf.d/: site.conf
schema/: swagger.json  swagger.yaml
tests/: .env.example  conftest.py
tests/src/: test_auth.py  test_users.py
tests/testdata/: permissions.json  roles.json  users.json
tests/utils/: server_messages.py  service.py  structures.py  testdata.py
