[tool.poetry]
name = "yap_auth"
version = "0.1.0"
description = ""
authors = ["Maxim B. <9652485@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "2.1.2"
Flask-SQLAlchemy = "2.5.1"
flask-swagger-ui = "3.36.0"
aioredis = "2.0.1"
psycopg2 = "2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
